--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     </head>
 
     <body>
-        
+        <header>
+            <h1>My Portfolio</h1>
+            <div class="nav">
+                <a>About Me</a>
+                <a>Projects</a>
+                <a>Contact</a>
+              </div>
+        </header>
     </body>
 
 </html>
