created about me section and added image folder

--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
 
     <body>
         <header>
-            <h1>My Portfolio</h1>
+            <h1>Megan Campbell</h1>
             <div class="nav">
                 <a>About Me</a>
                 <a>Projects</a>
                 <a>Contact</a>
               </div>
         </header>
+
+        <section>
+            <img src="assets/images/palm-tree.jpg" alt="palm trees">
+        </section>
+
+        <section>
+            <h2>About Me</h2>
+            <p>Hello! My name is Megan Campbell and I'm currently learning front end web development through the University of Miami.</p>
+        </section>
+
     </body>
 
 </html>
