created project section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,41 @@
             <p>Hello! My name is Megan Campbell and I'm currently learning front end web development through the University of Miami.</p>
         </section>
 
+        <section>
+            <h2>Projects</h2>
+            <div class="main-project">
+                <div class="project-info">
+                    <h2>Run Buddy</h2>
+                    <p>HTML CSS</p>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-info">
+                    <h2>Project 2</h2>
+                    <p>HTML CSS</p>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-info">
+                    <h2>Project 3</h2>
+                    <p>HTML CSS</p>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-info">
+                    <h2>Project 4</h2>
+                    <p>HTML CSS</p>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-info">
+                    <h2>Project 5</h2>
+                    <p>HTML CSS</p>
+                </div>
+            </div>
+        </section>
+
+    
     </body>
 
 </html>
