created contact me section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Megan's Portfolio</title>
-
+       
     </head>
 
     <body>
@@ -59,7 +59,16 @@
             </div>
         </section>
 
-    
+    <section>
+        <h2>Contact Me</h2>
+        <p>You can reach me at:</p>
+        <ul>
+            <li><a href="https://github.com/meganann201" target="blank">Github</a></li>
+            <li><a href="mailto: megancampbell201@gmail.com">Email</a></li>
+            <li><a href="tel:+12566559178">Phone</a></li>
+        </ul>
+    </section>
+
     </body>
 
 </html>
