added hero section

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
             </nav>
         </header>
 
-        <section>
-            <img src="assets/images/palm-tree.jpg" alt="palm trees">
-        </section>
+        <div class="hero"></div>
 
         <section id="about-me">
             <h2>About Me</h2>
