--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <body>
         <header>
             <h1>
-                <a href="/">Megan Campbell</a>
+                Megan Campbell
             </h1>
             <nav>
                 <ul>
                     <li>
-                        <a href="#about-me">About Me</a>
+                        <a href="#about">About Me</a>
                     </li>
                     <li>
                         <a href="#projects">Projects</a>
@@ -28,12 +28,43 @@
 
         <div class="hero"></div>
 
-        <section id="about-me">
-            <h2>About Me</h2>
-            <p>Hello! My name is Megan Campbell and I'm currently learning front end web development through the University of Miami.</p>
-        </section>
+        <section class="hero" id="about">
+            <img
+              src="assets/images/hero-image.jpeg"
+              alt="Megan Campbell"
+              loading="lazy"
+              class="hero-img"
+            >
+            <div class="bio">
+              <h2 class="bio-title">About Me</h2>
+              <p class="bio-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
+                dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
+                inventore tempore minus nemo, iste ullam illo laboriosam maiores
+                repudiandae quos!
+              </p>
+            </div>
+      </section>
 
-        <section id="projects">
+      <section class="more-about">
+        <h2>More About Me</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+          nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
+          autem deleniti cupiditate molestias quis unde quae totam porro dicta
+          iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
+          nostrum dolor minus, libero delectus praesentium perferendis
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
+          consequuntur labore? Ea totam voluptas amet!
+        </p>
+      </section>
+
+        <section class="projects">
             <h2>Projects</h2>
             <div class="main-project">
                 <div class="project-info">
@@ -67,7 +98,7 @@
             </div>
         </section>
 
-    <section id="contact">
+    <section class="contact">
         <h2>Contact Me</h2>
         <p>You can reach me at:</p>
         <ul>
