styled projects section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
       <section class="more-about">
         <h2>More About Me</h2>
+        <hr>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
           nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
@@ -64,41 +65,67 @@
         </p>
       </section>
 
-        <section class="projects">
-            <h2>Projects</h2>
-            <div class="main-project">
-                <div class="project-info">
-                    <h2>Run Buddy</h2>
-                    <p>HTML CSS</p>
-                </div>
-            </div>
-            <div class="project">
-                <div class="project-info">
-                    <h2>Project 2</h2>
-                    <p>HTML CSS</p>
-                </div>
-            </div>
-            <div class="project">
-                <div class="project-info">
-                    <h2>Project 3</h2>
-                    <p>HTML CSS</p>
-                </div>
-            </div>
-            <div class="project">
-                <div class="project-info">
-                    <h2>Project 4</h2>
-                    <p>HTML CSS</p>
-                </div>
-            </div>
-            <div class="project">
-                <div class="project-info">
-                    <h2>Project 5</h2>
-                    <p>HTML CSS</p>
-                </div>
-            </div>
-        </section>
+      <section class="projects" id="projects">
+        <h2 class="projects-title">Recent Projects</h2>
+       <hr>
+        <div class="projects-container">
+          <div class="project-container project-card">
+            <img
+              src="assets/images/javascript-image.png"
+              alt="expense-tracker"
+              loading="lazy"
+              class="project-pic"
+            />
+            <h3 class="project-title">Run Buddy</h3>
+            <p class="project-details">
+                HTML CSS JavaScript
+            </p>
+            <a href="#" target="_blank" class="project-link">Check it Out</a>
+          </div>
+          <div class="project-container project-card">
+            <img
+              src="assets/images/javascript-image.png"
+              alt="netflic-clone"
+              loading="lazy"
+              class="project-pic"
+            />
+            <h3 class="project-title">All Trails Mock</h3>
+            <p class="project-details">
+             HTML CSS JavaScript
+            </p>
+            <a href="#" target="_blank" class="project-link">Check it Out</a>
+          </div>
+          <div class="project-container project-card">
+            <img
+              src="assets/images/javascript-image.png"
+              alt="netflic-clone"
+              loading="lazy"
+              class="project-pic"
+            />
+            <h3 class="project-title">Budget App</h3>
+            <p class="project-details">
+                HTML CSS JavaScript
+            </p>
+            <a href="#" target="_blank" class="project-link">Check it Out</a>
+          </div>
+          <div class="project-container project-card">
+            <img
+              src="assets/images/javascript-image.png"
+              alt="netflic-clone"
+              loading="lazy"
+              class="project-pic"
+            />
+            <h3 class="project-title">Netflix Clone</h3>
+            <p class="project-details">
+                HTML CSS JavaScript
+            </p>
+            <a href="#" target="_blank" class="project-link">Check it Out</a>
+          </div>
+          
+        </div>
+      </section>
 
-    <section class="contact">
+    <section id="contact">
         <h2>Contact Me</h2>
         <p>You can reach me at:</p>
         <ul>
