--- a/index.html
+++ b/index.html
@@ -125,15 +125,55 @@
         </div>
       </section>
 
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <p>You can reach me at:</p>
-        <ul>
-            <li><a href="https://github.com/meganann201" target="blank">Github</a></li>
-            <li><a href="mailto: megancampbell201@gmail.com">Email</a></li>
-            <li><a href="tel:+12566559178">Phone</a></li>
-        </ul>
-    </section>
+      <section class="contact" id="contact">
+        <h2>Let's Work Together</h2>
+        <div class="contact-form-container">
+          <div class="contact-form">
+            <form>
+              <div class="form-control">
+                <label for="name">Name</label>
+                <input
+                  type="text"
+                  id="name"
+                  name="sender-name"
+                  placeholder="Enter Your Name"
+                  class="input-field"
+                  required
+                />
+              </div>
+              <div class="form-control">
+                <label for="email">Email</label>
+                <input
+                  type="email"
+                  id="email"
+                  name="sender-email"
+                  placeholder="Enter Your Email"
+                  class="input-field"
+                  required
+                />
+              </div>
+              <div class="form-control">
+                <label for="message">Message</label>
+                <textarea
+                  id="message"
+                  cols="60"
+                  rows="10"
+                  placeholder="Enter Your Message"
+                  name="message"
+                  class="input-field"
+                  required
+                ></textarea>
+              </div>
+              <input
+                type="submit"
+                value="Submit"
+                id="submit-btn"
+                class="submit-btn"
+              />
+            </form>
+          </div>
+        </div>
+      </section>
 
     </body>
 
