--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <title>Megan's Portfolio</title>
         <link rel="stylesheet" href="assets/style.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
     </head>
 
     <body>
@@ -175,6 +177,17 @@
         </div>
       </section>
 
+      <div class="socials">
+        <a href="https://twitter.com/megan_ann14" target="_blank">
+            <i class="fab fa-twitter" style="font-size:60px; color:#1DA1F2"></i>
+         </a>
+        <a href="https://github.com/meganann201" target="_blank"
+          ><i class="fab fa-github" style="font-size:60px; color: black;"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/megan-c-a89388100/" target="_blank"
+          ><i class="fab fa-linkedin" style="font-size:60px; color:#0077B5"></i>
+        </a>
+      </div>
     </body>
 
 </html>
