--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -128,10 +129,12 @@
       </section>
 
       <section class="contact" id="contact">
-        <h2>Let's Work Together</h2>
+        <h2>Get In Touch</h2>
         <div class="contact-form-container">
           <div class="contact-form">
-            <form>
+            <form action="https://formspree.io/f/mqknaeqb"
+            method="POST"
+            > 
               <div class="form-control">
                 <label for="name">Name</label>
                 <input
@@ -179,15 +182,39 @@
 
       <div class="socials">
         <a href="https://twitter.com/megan_ann14" target="_blank">
-            <i class="fab fa-twitter" style="font-size:60px; color:#1DA1F2"></i>
+            <i class="fab fa-twitter" style="font-size:45px; color:#1DA1F2"></i>
          </a>
-        <a href="https://github.com/meganann201" target="_blank"
-          ><i class="fab fa-github" style="font-size:60px; color: black;"></i>
+        <a href="https://github.com/meganann201" target="_blank">
+          <i class="fab fa-github" style="font-size:45px; color: black;"></i>
         </a>
         <a href="https://www.linkedin.com/in/megan-c-a89388100/" target="_blank"
-          ><i class="fab fa-linkedin" style="font-size:60px; color:#0077B5"></i>
+          ><i class="fab fa-linkedin" style="font-size:45px; color:#0077B5"></i>
         </a>
       </div>
+
+      <footer>
+          <section class="footer-contact">
+          <div class="footer-text">
+              <h4>Looking forward to working together!</h4>
+          </div>  
+          <div class="footer-number">
+              <a href="tel:12566559178"><i class="fas fa-phone" style="font-size: 25px; color: white;"></i> (256)655-9178</a>
+          </div>
+        </section>
+
+          <div class="footer-icons">
+            <a href="https://twitter.com/megan_ann14" target="_blank">
+                 <i class="fab fa-twitter" style="font-size:30px; color:white"></i>
+            </a>
+            <a href="https://github.com/meganann201" target="_blank">
+                 <i class="fab fa-github" style="font-size:30px; color: white;"></i>
+             </a>    
+             <a href="https://www.linkedin.com/in/megan-c-a89388100/" target="_blank">
+            <i class="fab fa-linkedin" style="font-size:30px; color: white"></i>
+            </a>
+          </div>
+     </footer>
+
     </body>
 
 </html>
