added comments to html and css

--- a/index.html
+++ b/index.html
@@ -1,220 +1,191 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Megan's Portfolio</title>
-        <link rel="stylesheet" href="assets/style.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
-    </head>
+<head>
+    <meta charset="utf-8">
+    <title>Megan's Portfolio</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <!--font awesome link for icons-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
-    <body>
-        <header>
-            <h1>
-                Megan Campbell
-            </h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#about">About Me</a>
-                    </li>
-                    <li>
-                        <a href="#projects">Projects</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                 </ul>
-            </nav>
-        </header>
+</head>
 
-        <div class="hero"></div>
+<body>
+    <header>
+        <h1>
+            Megan Campbell
+        </h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#about">About Me</a>
+                </li>
+                <li>
+                    <a href="#projects">Projects</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-        <section class="hero" id="about">
-            <img
-              src="assets/images/hero-image.jpeg"
-              alt="Megan Campbell"
-              loading="lazy"
-              class="hero-img"
-            >
-            <div class="bio">
-              <h2 class="bio-title">About Me</h2>
-              <p class="bio-text">
+    <!--hero image-->
+    <div class="hero"></div>
+
+    <section class="hero" id="about">
+        <img src="assets/images/hero-image.jpeg" alt="Megan Campbell" loading="lazy" class="hero-img">
+
+        <!--smaller about me section next to profile image-->
+        <div class="bio">
+            <h2 class="bio-title">About Me</h2>
+            <p class="bio-text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
                 dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
                 inventore tempore minus nemo, iste ullam illo laboriosam maiores
                 repudiandae quos!
-              </p>
-            </div>
-      </section>
+            </p>
+        </div>
+    </section>
 
-      <section class="more-about">
+    <section class="more-about">
         <h2>More About Me</h2>
         <hr>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-          nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-          autem deleniti cupiditate molestias quis unde quae totam porro dicta
-          iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+            nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
+            autem deleniti cupiditate molestias quis unde quae totam porro dicta
+            iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-          nostrum dolor minus, libero delectus praesentium perferendis
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
+            nostrum dolor minus, libero delectus praesentium perferendis
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
-          consequuntur labore? Ea totam voluptas amet!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
+            consequuntur labore? Ea totam voluptas amet!
         </p>
-      </section>
+    </section>
 
-      <section class="projects" id="projects">
+    <!--my work section-->
+    <section class="projects" id="projects">
         <h2 class="projects-title">Recent Projects</h2>
-       <hr>
+        <hr>
         <div class="projects-container">
-          <div class="project-container project-card">
-            <img
-              src="assets/images/javascript-image.png"
-              alt="expense-tracker"
-              loading="lazy"
-              class="project-pic"
-            />
-            <h3 class="project-title">Run Buddy</h3>
-            <p class="project-details">
-                HTML CSS JavaScript
-            </p>
-            <a href="#" target="_blank" class="project-link">Check it Out</a>
-          </div>
-          <div class="project-container project-card">
-            <img
-              src="assets/images/javascript-image.png"
-              alt="netflic-clone"
-              loading="lazy"
-              class="project-pic"
-            />
-            <h3 class="project-title">All Trails Mock</h3>
-            <p class="project-details">
-             HTML CSS JavaScript
-            </p>
-            <a href="#" target="_blank" class="project-link">Check it Out</a>
-          </div>
-          <div class="project-container project-card">
-            <img
-              src="assets/images/javascript-image.png"
-              alt="netflic-clone"
-              loading="lazy"
-              class="project-pic"
-            />
-            <h3 class="project-title">Budget App</h3>
-            <p class="project-details">
-                HTML CSS JavaScript
-            </p>
-            <a href="#" target="_blank" class="project-link">Check it Out</a>
-          </div>
-          <div class="project-container project-card">
-            <img
-              src="assets/images/javascript-image.png"
-              alt="netflic-clone"
-              loading="lazy"
-              class="project-pic"
-            />
-            <h3 class="project-title">Netflix Clone</h3>
-            <p class="project-details">
-                HTML CSS JavaScript
-            </p>
-            <a href="#" target="_blank" class="project-link">Check it Out</a>
-          </div>
-          
-        </div>
-      </section>
+            <div class="project-container project-card">
+                <a href="https://meganann201.github.io/run-buddy/">
+                    <img src="assets/images/run-buddy.png" alt="expense-tracker" loading="lazy" class="project-pic" />
+                </a>
+                <h3 class="project-title">Run Buddy</h3>
+                <p class="project-details">
+                    HTML CSS JavaScript
+                </p>
+                <a href="https://meganann201.github.io/run-buddy/" target="_blank" class="project-link">Check it Out</a>
+            </div>
+            <div class="project-container project-card">
+                <a href="https://meganann201.github.io/run-buddy/">
+                    <img src="assets/images/javascript-image.png" alt="netflic-clone" loading="lazy"
+                        class="project-pic" />
+                </a>
+                <h3 class="project-title">All Trails Mock</h3>
+                <p class="project-details">
+                    HTML CSS JavaScript
+                </p>
+                <a href="https://meganann201.github.io/trails/" target="_blank" class="project-link">Check it Out</a>
+            </div>
+            <div class="project-container project-card">
+                <a href="https://meganann201.github.io/run-buddy/">
+                    <img src="assets/images/javascript-image.png" alt="netflic-clone" loading="lazy"
+                        class="project-pic" />
+                </a>
+                <h3 class="project-title">Budget App</h3>
+                <p class="project-details">
+                    HTML CSS JavaScript
+                </p>
+                <a href="https://meganann201.github.io/run-buddy/" target="_blank" class="project-link">Check it Out</a>
+            </div>
+            <div class="project-container project-card">
+                <a href="https://meganann201.github.io/run-buddy/">
+                    <img src="assets/images/javascript-image.png" alt="netflic-clone" loading="lazy"
+                        class="project-pic" />
+                </a>
+                <h3 class="project-title">Netflix Clone</h3>
+                <p class="project-details">
+                    HTML CSS JavaScript
+                </p>
+                <a href="https://meganann201.github.io/run-buddy/" target="_blank" class="project-link">Check it Out</a>
+            </div>
 
-      <section class="contact" id="contact">
+        </div>
+    </section>
+
+    <!--contact section/email form -->
+    <section class="contact" id="contact">
         <h2>Get In Touch</h2>
         <div class="contact-form-container">
-          <div class="contact-form">
-            <form action="https://formspree.io/f/mqknaeqb"
-            method="POST"
-            > 
-              <div class="form-control">
-                <label for="name">Name</label>
-                <input
-                  type="text"
-                  id="name"
-                  name="sender-name"
-                  placeholder="Enter Your Name"
-                  class="input-field"
-                  required
-                />
-              </div>
-              <div class="form-control">
-                <label for="email">Email</label>
-                <input
-                  type="email"
-                  id="email"
-                  name="sender-email"
-                  placeholder="Enter Your Email"
-                  class="input-field"
-                  required
-                />
-              </div>
-              <div class="form-control">
-                <label for="message">Message</label>
-                <textarea
-                  id="message"
-                  cols="60"
-                  rows="10"
-                  placeholder="Enter Your Message"
-                  name="message"
-                  class="input-field"
-                  required
-                ></textarea>
-              </div>
-              <input
-                type="submit"
-                value="Submit"
-                id="submit-btn"
-                class="submit-btn"
-              />
-            </form>
-          </div>
+            <div class="contact-form">
+                <!--used formspree to make email form functional-->
+                <form action="https://formspree.io/f/mqknaeqb" method="POST">
+                    <div class="form-control">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="sender-name" placeholder="Enter Your Name"
+                            class="input-field" required />
+                    </div>
+                    <div class="form-control">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="sender-email" placeholder="Enter Your Email"
+                            class="input-field" required />
+                    </div>
+                    <div class="form-control">
+                        <label for="message">Message</label>
+                        <textarea id="message" cols="60" rows="10" placeholder="Enter Your Message" name="message"
+                            class="input-field" required></textarea>
+                    </div>
+                    <input type="submit" value="Submit" id="submit-btn" class="submit-btn" />
+                </form>
+            </div>
         </div>
-      </section>
+    </section>
 
-      <div class="socials">
+    <!--social media icons-->
+    <div class="socials">
         <a href="https://twitter.com/megan_ann14" target="_blank">
             <i class="fab fa-twitter" style="font-size:45px; color:#1DA1F2"></i>
-         </a>
+        </a>
         <a href="https://github.com/meganann201" target="_blank">
-          <i class="fab fa-github" style="font-size:45px; color: black;"></i>
+            <i class="fab fa-github" style="font-size:45px; color: black;"></i>
         </a>
-        <a href="https://www.linkedin.com/in/megan-c-a89388100/" target="_blank"
-          ><i class="fab fa-linkedin" style="font-size:45px; color:#0077B5"></i>
+        <a href="https://www.linkedin.com/in/megan-c-a89388100/" target="_blank"><i class="fab fa-linkedin"
+                style="font-size:45px; color:#0077B5"></i>
         </a>
-      </div>
+    </div>
 
-      <footer>
-          <section class="footer-contact">
-          <div class="footer-text">
-              <h4>Looking forward to working together!</h4>
-          </div>  
-          <div class="footer-number">
-              <a href="tel:12566559178"><i class="fas fa-phone" style="font-size: 25px; color: white;"></i> (256)655-9178</a>
-          </div>
+    <footer>
+        <section class="footer-contact">
+            <div class="footer-text">
+                <h4>Looking forward to working together!</h4>
+            </div>
+            <div class="footer-number">
+                <a href="tel:12566559178"><i class="fas fa-phone" style="font-size: 25px; color: white;"></i>
+                    (256)655-9178</a>
+            </div>
         </section>
 
-          <div class="footer-icons">
+        <div class="footer-icons">
             <a href="https://twitter.com/megan_ann14" target="_blank">
-                 <i class="fab fa-twitter" style="font-size:30px; color:white"></i>
+                <i class="fab fa-twitter" style="font-size:30px; color:white"></i>
             </a>
             <a href="https://github.com/meganann201" target="_blank">
-                 <i class="fab fa-github" style="font-size:30px; color: white;"></i>
-             </a>    
-             <a href="https://www.linkedin.com/in/megan-c-a89388100/" target="_blank">
-            <i class="fab fa-linkedin" style="font-size:30px; color: white"></i>
+                <i class="fab fa-github" style="font-size:30px; color: white;"></i>
             </a>
-          </div>
-     </footer>
+            <a href="https://www.linkedin.com/in/megan-c-a89388100/" target="_blank">
+                <i class="fab fa-linkedin" style="font-size:30px; color: white"></i>
+            </a>
+        </div>
+    </footer>
 
-    </body>
+</body>
 
 </html>
