added group project to recent projects section

--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
             </div>
             <div class="project-container project-card">
                 <a href="https://meganann201.github.io/run-buddy/">
-                    <img src="assets/images/javascript-image.png" alt="netflic-clone" loading="lazy"
+                    <img src="assets/images/group-project.png" alt="group-project" loading="lazy"
                         class="project-pic" />
                 </a>
-                <h3 class="project-title">Netflix Clone</h3>
+                <h3 class="project-title">IMBD Group Project</h3>
                 <p class="project-details">
-                    HTML CSS JavaScript
+                    HTML Bulma JavaScript
                 </p>
-                <a href="https://meganann201.github.io/run-buddy/" target="_blank" class="project-link">Check it Out</a>
+                <a href="https://meganann201.github.io/imbd/index.html" target="_blank" class="project-link">Check it Out</a>
             </div>
 
         </div>
